--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: teal;
+  background-color: black;
   height: 275px;
 }
 
